# MeuPortfolio

./: .gitignore  CLAUDE.md  README.md
.devcontainer/: devcontainer.json
.playwright-mcp/: page-2026-06-24T18-57-16-400Z.yml  page-2026-06-24T18-57-28-552Z.yml  page-2026-06-24T18-57-44-571Z.yml  page-2026-06-24T18-57-54-398Z.yml  page-2026-06-24T18-58-00-633Z.yml  page-2026-06-24T18-58-12-110Z.yml  page-2026-06-24T18-59-08-818Z.yml  page-2026-06-24T18-59-13-818Z.yml  page-2026-06-24T18-59-23-761Z.yml
analise_de_acoes/: .env.example  MIGRATION_README.md  requirements.txt  run.py  wsgi.py
analise_de_combustiveis/: .env.example  .env.local.example  .gitignore  .pyre_configuration  README.md  audit_warehouse.py  inspect_schema.py  inspect_schema_v2.py  inspect_warehouse.py  run.bat  run.sh
analise_de_combustiveis/data-pipeline-python/: .env.example  README.md  pyproject.toml
analise_de_combustiveis/data-pipeline-python/src/fuel_analytics/: __init__.py  cli.py  config.py  flows.py  forecasting.py  logging.py  market.py  processing.py  storage.py
analise_de_combustiveis/data-pipeline-python/src/fuel_analytics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
analise_de_combustiveis/data-pipeline-python/src/fuel_analytics/clients/: anp.py  basedosdados_client.py
analise_de_combustiveis/data-pipeline-python/tests/: test_contracts.py
analise_finaceira/: .gitignore  README.md  __init__.py  __main__.py  add_alertas_tables.py  check_db.py  consulta_alertas.py  force_create_tables.py  init_db.py  logger.py  main.py  requirements.txt  requirements_logs.txt  run.py  test_alertas_db.py  testar_alertas_automaticos.py  update_db.py  utils.py  verificar_banco.py  verificar_tabela.py
aprovacao_compras/: .gitignore  requirements.txt  run.bat  seed.py
bot_telegram/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  run.bat  run.sh  start_bot_telegram.bat
collab_canvas/: .gitignore  PROMPT_MESTRE.md  parar_processos.bat  start_collabcanvas.bat  stop_collabcanvas.bat
data_narrator/: README.md  app.py  requirements.txt  run.bat  run.sh
devmetrics/: .env.example  .gitignore  README.md  run.bat  run.sh  start_devmetrics.bat
documind_local/: .env  .env.example  .gitignore  README.md  install_pdf_tools.bat  reprocess_documind.bat  run.bat  run.sh  start_documind.bat  stop_documind.bat
encurtador_url/: .env.example  .gitignore  README.md  run.bat  run.sh  start_encurtador.bat
enem_insights/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt  run.bat  run.sh  🏠_Home.py
estoque-api/: .gitignore  LICENSE  README.md  estoque.db  requirements.txt  sql_app.db
finanças/: .env.example  .gitignore  CLAUDE.md  Dockerfile  MANUAL.md  README.md  backup.bat  backup_project.py  build.bat  check_url.py  db.sqlite3  debug_manual_fetch.py  debug_test.py  debug_yfinance.py  debug_yfinance_simple.py  docker-compose.yml  examples.py  finance_project.spec  install.bat  manage.py  populate_categories.py  populate_data.bat  requirements.txt  run.bat  run.sh  run_app.py  setup_script.iss  test_output.txt
gerador_roteiros/: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOY.md  Dockerfile  LICENSE  Procfile  README.md  app.py  app.py.bak  docker-compose.yml  examples.py  pyproject.toml  requirements.txt  run.bat  run.sh  settings.json  setup.cfg  setup.py  setup.sh  start.sh  start_gerador_roteiros.bat  streamlit_config.toml
gerador_roteiros/.github/workflows/: ci.yml
gerador_roteiros/.streamlit/: config.toml  secrets.toml  secrets.toml.example
gerador_roteiros/pages/: 01_Roteiro.py
gerador_roteiros/static/css/: custom.css
gerador_roteiros/utils/: prompts.py
gereciador_ativos/: .env.example  .gitignore  README.md  listar_ativos.py  requirements-dev.txt  requirements.txt  run.py  wsgi.py
instance/: app.db
legisla_ai/: run.bat
memmap/: README.md  docker-compose.yml  run.bat  run.sh
neon_drift/: .env.example  .gitignore  README.md  run.bat  run.sh  start_neon_drift.bat  stop_neon_drift.bat
neon_snake/: .env.example  .gitignore  README.md  run.bat  run.sh  start_neon_snake.bat  stop_neon_snake.bat
news_sentiment_radar/: .gitignore  README.md  start_news_radar.bat  stop_news_radar.bat
nexus/: .env.example  Dockerfile  README.md  __init__.py  config.py  main.py  requirements.txt  run.bat  run.sh
projeto/: app.py  (+9 more)
(+908 files in other folders)
