[metadata]
name = gerador_roteiros
version = 0.1.0
description = Gerador de Roteiros de Viagem com IA
author = Seu Nome
author_email = seu.email@exemplo.com
license = MIT

[options]
packages = find:
install_requires =
    streamlit==1.50.0
    loguru==0.7.3
    requests==2.31.0
    python-dotenv==1.0.0
    google-generativeai==0.8.5
    mistralai==1.9.10
    pandas==2.0.3
    numpy==1.24.3
    fastapi==0.104.1
    uvicorn==0.24.0
    httpx==0.28.1
    python-multipart==0.0.6
    setuptools==69.5.1

[options.packages.find]
where = .
include = gerador_roteiros*
